--- a/HobbyBusinessLayer/packages.config
+++ b/HobbyBusinessLayer/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GraphQL" version="0.17.3" targetFramework="net461" />
-  <package id="GraphQL-Parser" version="2.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="GraphQL" version="2.0.0-alpha-927" targetFramework="net461" />
+  <package id="GraphQL-Parser" version="3.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
 </packages>
