--- a/HobbyAPI/packages.config
+++ b/HobbyAPI/packages.config
@@ -7,6 +7,7 @@
   <package id="GraphQL-Parser" version="3.0.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
@@ -14,8 +15,9 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
