updated DB for successful addition

--- a/DataLayer/App.config
+++ b/DataLayer/App.config
@@ -10,7 +10,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="HobbyDBEntities" connectionString="metadata=res://*/HobbyModel.csdl|res://*/HobbyModel.ssdl|res://*/HobbyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=HobbyDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="HobbyDBEntities" connectionString="metadata=res://*/HobbyModel.csdl|res://*/HobbyModel.ssdl|res://*/HobbyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=HobbyDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HobbyDBEntities1" connectionString="metadata=res://*/HobbyModel.csdl|res://*/HobbyModel.ssdl|res://*/HobbyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=HobbyDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
