--- a/HobbyBusinessLayer/HobbyBusinessLayer.csproj
+++ b/HobbyBusinessLayer/HobbyBusinessLayer.csproj
@@ -69,14 +69,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataLayer\DataLayer.csproj">
-      <Project>{d5fa5746-ae27-4fcd-942b-4719af896a84}</Project>
-      <Name>DataLayer</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HobbyDataLayer\HobbyDataLayer.csproj">
+      <Project>{8d24b0d1-de9e-4582-86d6-5153df75dc03}</Project>
+      <Name>HobbyDataLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
