--- a/HobbyDataLayer/HobbyDataLayer.csproj
+++ b/HobbyDataLayer/HobbyDataLayer.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>201807040615502_InitialClasses.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\DatabaseInitializer.cs" />
     <Compile Include="Models\Hobby.cs" />
     <Compile Include="Models\HobbyDBContext.cs" />
     <Compile Include="Models\Person.cs" />
